--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -445,5 +445,6 @@
   "click_to_print": "Fai clic para imprimir",
   "show_whitespaces": "Mostrar espazos en branco",
   "price_change": "Cambio de prezo",
-  "balance_reserved": "Saldo reservado"
+  "balance_reserved": "Saldo reservado",
+  "tokens_total_balance": "Saldo total estimado de fichas"
 }
