--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -445,5 +445,6 @@
   "click_to_print": "प्रिंट करने के लिए क्लिक करें",
   "show_whitespaces": "व्हॉट्सएप दिखाएं",
   "price_change": "मूल्य परिवर्तन",
-  "balance_reserved": "आरक्षित शेष राशि"
+  "balance_reserved": "आरक्षित शेष राशि",
+  "tokens_total_balance": "टोकन की अनुमानित कुल शेष राशि"
 }
