--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -445,5 +445,6 @@
   "click_to_print": "Clicca per stampare",
   "show_whitespaces": "Mostra spazi bianchi",
   "price_change": "Cambio di prezzo",
-  "balance_reserved": "Saldo riservato"
+  "balance_reserved": "Saldo riservato",
+  "tokens_total_balance": "Saldo totale stimato dei token"
 }
