--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -445,5 +445,6 @@
   "click_to_print": "クリックして印刷",
   "show_whitespaces": "空白を表示する",
   "price_change": "価格変更",
-  "balance_reserved": "予約残高"
+  "balance_reserved": "予約残高",
+  "tokens_total_balance": "トークンの推定合計残高"
 }
