--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -445,5 +445,6 @@
   "click_to_print": "Cliquez pour imprimer",
   "show_whitespaces": "Afficher les espaces",
   "price_change": "Changement de prix",
-  "balance_reserved": "Solde réservé"
+  "balance_reserved": "Solde réservé",
+  "tokens_total_balance": "Solde total estimé des jetons"
 }
