--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -445,5 +445,6 @@
   "click_to_print": "Kliknite za ispis",
   "show_whitespaces": "Prikaži bijele prostore",
   "price_change": "Promjena cijene",
-  "balance_reserved": "Rezervirano stanje"
+  "balance_reserved": "Rezervirano stanje",
+  "tokens_total_balance": "Procijenjeni ukupni saldo žetona"
 }
