chore: pimped the balance chart layout

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Нечетлив формат",
   "current_version": "Сегашна версия",
   "dashboard": "Табло",
-  "dashboard_welcome_title": "Добре дошли във Финикс! Последните ви салда по сметката ще се покажат тук.",
+  "dashboard_welcome_title": "Добре дошли в Signum! След като тази сметка има транзакции, нейната история на баланса ще се появи тук.",
   "data": "Данни",
   "date": "Дата",
   "deadline": "Краен срок",
