--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Format il·legible",
   "current_version": "Versió actual",
   "dashboard": "panell",
-  "dashboard_welcome_title": "Benvingut a Phoenix! Els saldos recents del vostre compte apareixeran aquí.",
+  "dashboard_welcome_title": "Benvingut a Signum Un cop aquest compte faci transaccions, apareixerà el seu historial de saldo aquí.",
   "data": "Dades",
   "date": "Data",
   "deadline": "Data límit",
