--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Nečitelný formát",
   "current_version": "Současná verze",
   "dashboard": "Přístrojová deska",
-  "dashboard_welcome_title": "Vítejte ve Phoenixu! Zde se zobrazí vaše nedávné zůstatky na účtu.",
+  "dashboard_welcome_title": "Vítejte v Signumu! Jakmile má tento účet transakce, zobrazí se zde jeho historie zůstatku.",
   "data": "Data",
   "date": "datum",
   "deadline": "Uzávěrka",
