--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Unlesbares Format",
   "current_version": "Aktuelle Version",
   "dashboard": "Dashboard",
-  "dashboard_welcome_title": "Willkommen bei Phoenix! Hier werden Deine aktuellesten Kontostände angezeigt.",
+  "dashboard_welcome_title": "Willkommen bei Signum! Sobald auf diesem Konto Transaktionen getätigt wurden, wird der Kontostandsverlauf hier angezeigt.",
   "data": "Daten",
   "date": "Datum",
   "deadline": "Frist",
