--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Μη αναγνώσιμη μορφή",
   "current_version": "Τρέχουσα έκδοση",
   "dashboard": "Ταμπλό",
-  "dashboard_welcome_title": "Καλώς ήλθατε στο Φοίνιξ! Τα πρόσφατα υπόλοιπα του λογαριασμού σας θα εμφανίζονται εδώ.",
+  "dashboard_welcome_title": "Καλώς ήλθατε στο Signum! Μόλις αυτός ο λογαριασμός έχει συναλλαγές, το ιστορικό του υπολοίπου του θα εμφανιστεί εδώ.",
   "data": "Δεδομένα",
   "date": "Ημερομηνία",
   "deadline": "Προθεσμία",
