--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Unreadable Format",
   "current_version": "Current version",
   "dashboard": "Dashboard",
-  "dashboard_welcome_title": "Welcome to Phoenix! Your recent account balances will appear here.",
+  "dashboard_welcome_title": "Welcome to Signum! Once this account has transactions its balance history will appear here.",
   "data": "Data",
   "date": "Date",
   "deadline": "Deadline",
