--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Formato ilegible",
   "current_version": "Versión actual",
   "dashboard": "Tablero",
-  "dashboard_welcome_title": "¡Bienvenidos a Phoenix! Los balance(s) recientes de su cuenta aparecerán aquí.",
+  "dashboard_welcome_title": "¡Bienvenido a Signum! Una vez que esta cuenta tenga transacciones, su historial de saldo aparecerá aquí.",
   "data": "Datos",
   "date": "Fecha",
   "deadline": "Plazo",
