--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Lukukelvoton muoto",
   "current_version": "Nykyinen versio",
   "dashboard": "Kojelauta",
-  "dashboard_welcome_title": "Tervetuloa Phoenixiin! Viimeisimmät tilisi saldot näkyvät täällä.",
+  "dashboard_welcome_title": "Tervetuloa Signumiin! Kun tällä tilillä on tapahtumia, sen saldohistoria näkyy tässä.",
   "data": "Tiedot",
   "date": "Päivämäärä",
   "deadline": "Takaraja",
