--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Format illisible",
   "current_version": "Version actuelle",
   "dashboard": "Tableau de bord",
-  "dashboard_welcome_title": "Bienvenue à Phénix ! Vos soldes de compte récents apparaîtront ici.",
+  "dashboard_welcome_title": "Bienvenue sur Signum ! Une fois que ce compte a effectué des transactions, son historique de solde apparaîtra ici.",
   "data": "Données",
   "date": "Date",
   "deadline": "Date limite",
