--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Formato ilegible",
   "current_version": "Versión actual",
   "dashboard": "Panel de control",
-  "dashboard_welcome_title": "Benvido a Phoenix. Os saldos recentes da túa conta aparecerán aquí.",
+  "dashboard_welcome_title": "Benvido a Signum Unha vez que esta conta teña transaccións, o seu historial de saldo aparecerá aquí.",
   "data": "Datos",
   "date": "Data",
   "deadline": "Data límite",
