--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "अपठनीय प्रारूप",
   "current_version": "वर्तमान संस्करण",
   "dashboard": "डैशबोर्ड",
-  "dashboard_welcome_title": "फीनिक्स में आपका स्वागत है! आपके हाल के खाते की शेष राशि यहां दिखाई देगी।",
+  "dashboard_welcome_title": "साइनम में आपका स्वागत है! एक बार इस खाते में लेन-देन हो जाने के बाद, इसका शेष इतिहास यहां दिखाई देगा।",
   "data": "डेटा",
   "date": "तारीख",
   "deadline": "समयसीमा",
