--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Nečitljiv format",
   "current_version": "Trenutna verzija",
   "dashboard": "Nadzorna ploča",
-  "dashboard_welcome_title": "Dobrodošli u Phoenix! Ovdje će se pojaviti vaša nedavna stanja na računu.",
+  "dashboard_welcome_title": "Dobrodošli u Signum! Nakon što ovaj račun ima transakcije, ovdje će se pojaviti povijest stanja.",
   "data": "Podaci",
   "date": "Datum",
   "deadline": "Rok",
