--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Format Tidak Dapat Dibaca",
   "current_version": "Versi sekarang",
   "dashboard": "Dasbor",
-  "dashboard_welcome_title": "Selamat datang di Phoenix! Saldo akun terakhir Anda akan muncul di sini.",
+  "dashboard_welcome_title": "Selamat datang di Signum! Setelah akun ini melakukan transaksi, riwayat saldonya akan muncul di sini.",
   "data": "Data",
   "date": "Tanggal",
   "deadline": "Tenggat waktu",
