--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Formato illeggibile",
   "current_version": "Versione corrente",
   "dashboard": "Pannello di controllo",
-  "dashboard_welcome_title": "Benvenuti a Fenice! I saldi recenti del tuo account verranno visualizzati qui.",
+  "dashboard_welcome_title": "Benvenuto in Signum! Una volta che questo conto ha delle transazioni, la sua cronologia del saldo apparirà qui.",
   "data": "Dati",
   "date": "Data",
   "deadline": "Scadenza",
