--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "読めないフォーマット",
   "current_version": "現行版",
   "dashboard": "ダッシュボード",
-  "dashboard_welcome_title": "フェニックスへようこそ！最近の口座残高がここに表示されます。",
+  "dashboard_welcome_title": "シグナムへようこそ！このアカウントに取引があると、残高履歴がここに表示されます。",
   "data": "データ",
   "date": "日付",
   "deadline": "締め切り",
