--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Neperskaitomas formatas",
   "current_version": "Dabartinė versija",
   "dashboard": "Prietaisų skydelis",
-  "dashboard_welcome_title": "Sveiki atvykę į „Phoenix“! Jūsų paskutiniai sąskaitos likučiai bus rodomi čia.",
+  "dashboard_welcome_title": "Sveiki atvykę į „Signum“! Kai šioje sąskaitoje bus operacijų, jos balanso istorija bus rodoma čia.",
   "data": "Duomenys",
   "date": "Data",
   "deadline": "Terminas",
