--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Onleesbaar formaat",
   "current_version": "Huidige versie",
   "dashboard": "Dashboard",
-  "dashboard_welcome_title": "Welkom in Feniks! Uw recente rekeningsaldi worden hier weergegeven.",
+  "dashboard_welcome_title": "Welkom bij Signum! Zodra deze rekening transacties heeft, wordt de saldogeschiedenis hier weergegeven.",
   "data": "Gegevens",
   "date": "Datum",
   "deadline": "Deadline",
