--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Nieczytelny format",
   "current_version": "Obecna wersja",
   "dashboard": "Deska rozdzielcza",
-  "dashboard_welcome_title": "Witamy w Feniksie! Tutaj pojawią się Twoje ostatnie salda konta.",
+  "dashboard_welcome_title": "Witamy w Signum! Po dokonaniu transakcji na tym koncie, jego historia salda pojawi się tutaj.",
   "data": "Dane",
   "date": "Data",
   "deadline": "Ostateczny termin",
