--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Formato ilegível",
   "current_version": "Versão Atual",
   "dashboard": "Painel",
-  "dashboard_welcome_title": "Bem-vindo a Phoenix! Os saldos recentes de sua conta aparecerão aqui.",
+  "dashboard_welcome_title": "Bem-vindo ao Signum! Assim que esta conta tiver transações, seu histórico de saldo aparecerá aqui.",
   "data": "Dados",
   "date": "Data",
   "deadline": "Data limite",
