--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Format necitit",
   "current_version": "Versiune curentă",
   "dashboard": "Bord",
-  "dashboard_welcome_title": "Bine ați venit la Phoenix! Soldurile recente ale contului dvs. vor apărea aici.",
+  "dashboard_welcome_title": "Bine ați venit la Signum! Odată ce acest cont are tranzacții, istoricul soldului său va apărea aici.",
   "data": "Date",
   "date": "Data",
   "deadline": "Termen limită",
