--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Нечитаемый формат",
   "current_version": "Текущая версия",
   "dashboard": "Панель управления",
-  "dashboard_welcome_title": "Добро пожаловать в Phoenix! Здесь будут отображаться последние данные о состоянии вашего счета.",
+  "dashboard_welcome_title": "Добро пожаловать в Сигнум! После того, как на этом счете будут проводиться транзакции, здесь появится история его баланса.",
   "data": "Данные",
   "date": "Дата",
   "deadline": "Крайний срок",
