--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Nečitateľný formát",
   "current_version": "Aktuálna verzia",
   "dashboard": "Dashboard",
-  "dashboard_welcome_title": "Vitajte vo Phoenixe! Tu sa zobrazia vaše posledné zostatky na účte.",
+  "dashboard_welcome_title": "Vitajte v Signume! Keď má tento účet transakcie, zobrazí sa tu jeho história zostatku.",
   "data": "Údaje",
   "date": "Dátum",
   "deadline": "Konečný termín",
