--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Нечитљив формат",
   "current_version": "Тренутна верзија",
   "dashboard": "Командна табла",
-  "dashboard_welcome_title": "Добродошли у Пхоеник! Овде ће се појавити недавна стања на вашем рачуну.",
+  "dashboard_welcome_title": "Добродошли у Сигнум! Када овај рачун има трансакције, његова историја стања ће се појавити овде.",
   "data": "Подаци",
   "date": "Датум",
   "deadline": "Рок",
