--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Okunamayan Biçim",
   "current_version": "Şimdiki versiyonu",
   "dashboard": "Gösterge Paneli",
-  "dashboard_welcome_title": "Phoenix'e hoş geldiniz! Son hesap bakiyeleriniz burada görünecektir.",
+  "dashboard_welcome_title": "Signum'a hoş geldiniz! Bu hesapta işlem yapıldığında, bakiye geçmişi burada görünecektir.",
   "data": "Veri",
   "date": "Tarih",
   "deadline": "Son teslim tarihi",
