--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Нечитабельний формат",
   "current_version": "Поточна версія",
   "dashboard": "Панель приладів",
-  "dashboard_welcome_title": "Ласкаво просимо у Фенікс! Тут з’являться ваші останні залишки на рахунку.",
+  "dashboard_welcome_title": "Ласкаво просимо до Signum! Після здійснення операцій на цьому рахунку тут з’явиться історія його балансу.",
   "data": "Дані",
   "date": "Дата",
   "deadline": "Кінцевий термін",
