--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -446,5 +446,9 @@
   "show_whitespaces": "व्हॉट्सएप दिखाएं",
   "price_change": "मूल्य परिवर्तन",
   "balance_reserved": "आरक्षित शेष राशि",
-  "tokens_total_balance": "टोकन की अनुमानित कुल शेष राशि"
+  "tokens_total_balance": "टोकन की अनुमानित कुल शेष राशि",
+  "forged_blocks": "जाली ब्लॉक",
+  "reward_income": "इनाम आय",
+  "last_forged_block": "अंतिम जाली ब्लॉक",
+  "reward_income_info": "यह आपके द्वारा इस खाते के साथ जाली पुरस्कारों का योग है जैसे कि आप एक एकल खनिक थे और जरूरी नहीं कि यह आपकी प्रभावी खनन आय को दर्शाता हो।"
 }
