--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -446,5 +446,9 @@
   "show_whitespaces": "Witruimte tonen",
   "price_change": "Prijs verandering",
   "balance_reserved": "Gereserveerd saldo",
-  "tokens_total_balance": "Geschat totaal saldo van tokens"
+  "tokens_total_balance": "Geschat totaal saldo van tokens",
+  "forged_blocks": "Gesmede blokken",
+  "reward_income": "Beloning inkomen",
+  "last_forged_block": "Laatst gesmeed blok",
+  "reward_income_info": "Dit is de som van de blokbeloningen die je met dit account hebt gesmeed alsof je een solo-mijnwerker bent en weerspiegelt niet noodzakelijkerwijs je effectieve mijninkomen."
 }
