--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -446,5 +446,9 @@
   "show_whitespaces": "Показать пробелы",
   "price_change": "Изменение цены",
   "balance_reserved": "Зарезервированный баланс",
-  "tokens_total_balance": "Предполагаемый общий баланс токенов"
+  "tokens_total_balance": "Предполагаемый общий баланс токенов",
+  "forged_blocks": "Кованые блоки",
+  "reward_income": "Доход от вознаграждения",
+  "last_forged_block": "Последний кованый блок",
+  "reward_income_info": "Это сумма вознаграждений за блоки, которые вы создали с помощью этой учетной записи, как если бы вы были индивидуальным майнером, и не обязательно отражает ваш эффективный доход от майнинга."
 }
