--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -446,5 +446,9 @@
   "show_whitespaces": "Прикажи размаке",
   "price_change": "Промена цене",
   "balance_reserved": "Резервисано стање",
-  "tokens_total_balance": "Процењено укупно стање жетона"
+  "tokens_total_balance": "Процењено укупно стање жетона",
+  "forged_blocks": "Ковани блокови",
+  "reward_income": "Наградни приход",
+  "last_forged_block": "Последњи фалсификовани блок",
+  "reward_income_info": "Ово је збир блок награда које сте зарадили на овом рачуну као да сте самостални рудар и не одражава нужно ваш ефективни приход од рударства."
 }
