--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -446,5 +446,9 @@
   "show_whitespaces": "Показване на празни пространства",
   "price_change": "Промяна на цената",
   "balance_reserved": "Запазен баланс",
-  "tokens_total_balance": "Приблизителен общ баланс на жетони"
+  "tokens_total_balance": "Приблизителен общ баланс на жетони",
+  "forged_blocks": "Ковани блокове",
+  "reward_income": "Доход от възнаграждение",
+  "last_forged_block": "Последен подправен блок",
+  "reward_income_info": "Това е сумата от блоковите награди, които сте подправили с тази сметка, сякаш сте самостоятелен миньор и не отразява непременно ефективния ви добив от добив."
 }
