--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -446,5 +446,9 @@
   "show_whitespaces": "Mostra espais en blanc",
   "price_change": "Canvi de preu",
   "balance_reserved": "Saldo reservat",
-  "tokens_total_balance": "Saldo total estimat de fitxes"
+  "tokens_total_balance": "Saldo total estimat de fitxes",
+  "forged_blocks": "Blocs forjats",
+  "reward_income": "Ingressos de recompensa",
+  "last_forged_block": "Darrer bloc forjat",
+  "reward_income_info": "Aquesta és la suma de les recompenses que heu obtingut amb aquest compte com si fos un miner en solitari i no reflecteix necessàriament els vostres ingressos efectius de mineria."
 }
