--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -446,5 +446,9 @@
   "show_whitespaces": "Leerzeichen anzeigen",
   "price_change": "Preisveränderung",
   "balance_reserved": "Reserviertes Guthaben",
-  "tokens_total_balance": "Geschätzter Gesamtsaldo der Token"
+  "tokens_total_balance": "Geschätzter Gesamtsaldo der Token",
+  "forged_blocks": "Geschmiedete Blöcke",
+  "reward_income": "Belohnungseinkommen",
+  "last_forged_block": "Letzter geschmiedeter Block",
+  "reward_income_info": "Dies ist die Summe der Blockbelohnungen, die Du mit diesem Konto geschmiedet hast, als ob Du ein Solo-Miner wärst, und spiegelt nicht unbedingt Dein effektives Mining-Einkommen wider."
 }
