--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -446,5 +446,9 @@
   "show_whitespaces": "Εμφάνιση κενών χώρων",
   "price_change": "Αλλαγή Τιμής",
   "balance_reserved": "Κρατημένο υπόλοιπο",
-  "tokens_total_balance": "Εκτιμώμενο συνολικό υπόλοιπο διακριτικών"
+  "tokens_total_balance": "Εκτιμώμενο συνολικό υπόλοιπο διακριτικών",
+  "forged_blocks": "Σφυρηλατημένα μπλοκ",
+  "reward_income": "Εισόδημα ανταμοιβής",
+  "last_forged_block": "Τελευταίο σφυρηλατημένο μπλοκ",
+  "reward_income_info": "Αυτό είναι το άθροισμα των ανταμοιβών μπλοκ που σφυρηλατήσατε με αυτόν τον λογαριασμό σαν να ήσασταν σόλο ανθρακωρύχος και δεν αντικατοπτρίζει απαραίτητα το πραγματικό σας εισόδημα εξόρυξης."
 }
