--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -446,5 +446,9 @@
   "show_whitespaces": "Tampilkan Spasi Putih",
   "price_change": "Perubahan harga",
   "balance_reserved": "Saldo Cadangan",
-  "tokens_total_balance": "Perkiraan Total Saldo Token"
+  "tokens_total_balance": "Perkiraan Total Saldo Token",
+  "forged_blocks": "Blok Ditempa",
+  "reward_income": "Pendapatan Hadiah",
+  "last_forged_block": "Blok Ditempa Terakhir",
+  "reward_income_info": "Ini adalah jumlah hadiah blok yang Anda tempa dengan akun ini seolah-olah Anda adalah penambang solo dan tidak selalu mencerminkan pendapatan penambangan efektif Anda."
 }
