--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -446,5 +446,9 @@
   "show_whitespaces": "Rodyti baltas erdves",
   "price_change": "Kainos keitimas",
   "balance_reserved": "Rezervuotas balansas",
-  "tokens_total_balance": "Apskaičiuotas bendras žetonų balansas"
+  "tokens_total_balance": "Apskaičiuotas bendras žetonų balansas",
+  "forged_blocks": "Kaltiniai blokai",
+  "reward_income": "Atlyginimo pajamos",
+  "last_forged_block": "Paskutinis suklastotas blokas",
+  "reward_income_info": "Tai blokinių atlygių, kuriuos sukūrėte naudodami šią sąskaitą, suma, tarsi būtumėte vienas kalnakasis, ir nebūtinai atspindi jūsų faktines kasybos pajamas."
 }
