--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -446,5 +446,9 @@
   "show_whitespaces": "Afișați spațiile albe",
   "price_change": "Schimbare de preț",
   "balance_reserved": "Sold rezervat",
-  "tokens_total_balance": "Soldul total estimat de jetoane"
+  "tokens_total_balance": "Soldul total estimat de jetoane",
+  "forged_blocks": "Blocuri forjate",
+  "reward_income": "Venituri de recompensă",
+  "last_forged_block": "Ultimul bloc falsificat",
+  "reward_income_info": "Aceasta este suma recompenselor blocate pe care le-ați forțat cu acest cont ca și cum ați fi un miner solo și nu reflectă neapărat veniturile dvs. miniere efective."
 }
