--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -446,5 +446,9 @@
   "show_whitespaces": "Zobraziť medzery",
   "price_change": "Zmena ceny",
   "balance_reserved": "Vyhradený zostatok",
-  "tokens_total_balance": "Odhadovaný celkový zostatok tokenov"
+  "tokens_total_balance": "Odhadovaný celkový zostatok tokenov",
+  "forged_blocks": "Kované bloky",
+  "reward_income": "Príjem z odmeny",
+  "last_forged_block": "Posledný kovaný blok",
+  "reward_income_info": "Toto je súčet blokových odmien, ktoré ste sfalšovali na tomto účte, ako keby ste boli sólo baník, a nemusí nevyhnutne odrážať váš skutočný príjem z ťažby."
 }
