--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -446,5 +446,9 @@
   "show_whitespaces": "Показати пробіли",
   "price_change": "Зміна ціни",
   "balance_reserved": "Зарезервований баланс",
-  "tokens_total_balance": "Орієнтовний загальний залишок жетонів"
+  "tokens_total_balance": "Орієнтовний загальний залишок жетонів",
+  "forged_blocks": "Ковані блоки",
+  "reward_income": "Дохід від винагороди",
+  "last_forged_block": "Останній підроблений блок",
+  "reward_income_info": "Це сума блочних винагород, які ви підробили за допомогою цього облікового запису, як якщо б ви були сольним майнером і не обов'язково відображали ваш ефективний дохід від майнінгу."
 }
